--- a/source/css/style.css
+++ b/source/css/style.css
@@ -12,8 +12,19 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  background-color: #6868a1;
+  /* background-color: #6868a1; */
+  background-blend-mode: screen;
+  background-blend-mode: multiply;
+  background-blend-mode: overlay;
+  background-blend-mode: darken;
+  background-blend-mode: soft-light;
+  background-blend-mode: luminosity;  
+  background:
+    linear-gradient(red, transparent),
+    linear-gradient(to top left, lime, transparent),
+    linear-gradient(to top right, blue, transparent);
 }
+
 
 .display {
   width: 100%;
@@ -35,6 +46,12 @@ body {
   resize: vertical;
   caret-color: #9724cc;
   outline: none;
+}
+
+.display__textarea::placeholder {
+  font-size: 1.2rem;
+  font-weight: 200;
+  color: #aa5656;
 }
 
 .main-title {
